RESOLVED FIXED149655
[EFL] css3/device-adapt/* tests failed after r190335.
https://bugs.webkit.org/show_bug.cgi?id=149655
Summary [EFL] css3/device-adapt/* tests failed after r190335.
Hunseop Jeong
Reported 2015-09-30 01:31:54 PDT
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/24638/steps/layout-test/logs/stdio css3/device-adapt/opera/cascading-002.xhtml [ Failure ] css3/device-adapt/opera/cascading-003.xhtml [ Failure ] css3/device-adapt/opera/cascading-004.xhtml [ Failure ] css3/device-adapt/opera/constrain-001.xhtml [ Failure ] css3/device-adapt/opera/constrain-004.xhtml [ Failure ] css3/device-adapt/opera/constrain-005.xhtml [ Failure ] css3/device-adapt/opera/constrain-006.xhtml [ Failure ] css3/device-adapt/opera/constrain-007.xhtml [ Failure ] css3/device-adapt/opera/constrain-008.xhtml [ Failure ] css3/device-adapt/opera/constrain-011.xhtml [ Failure ] css3/device-adapt/opera/constrain-013.xhtml [ Failure ] css3/device-adapt/opera/constrain-014.xhtml [ Failure ] css3/device-adapt/opera/constrain-015.xhtml [ Failure ] css3/device-adapt/opera/constrain-016.xhtml [ Failure ] css3/device-adapt/opera/constrain-017.xhtml [ Failure ] css3/device-adapt/opera/constrain-018.xhtml [ Failure ] css3/device-adapt/opera/constrain-019.xhtml [ Failure ] css3/device-adapt/opera/constrain-020.xhtml [ Failure ] css3/device-adapt/opera/syntax-001.xhtml [ Failure ] css3/device-adapt/opera/syntax-002.xhtml [ Failure ] css3/device-adapt/opera/syntax-003.xhtml [ Failure ] css3/device-adapt/viewport-width-check-window-innerwidth-correct.html [ Failure ]
Attachments
Patch (1.47 KB, patch)
2015-09-30 03:01 PDT, Hunseop Jeong
no flags
Patch (1.39 KB, patch)
2015-09-30 20:01 PDT, Hunseop Jeong
no flags
Hunseop Jeong
Comment 1 2015-09-30 01:35:33 PDT
Existing testOptions.shouldUseFixedLayout value is overwritten in shouldUseFixedLayout().
Hunseop Jeong
Comment 2 2015-09-30 03:01:12 PDT
Simon Fraser (smfr)
Comment 3 2015-09-30 08:40:37 PDT
Comment on attachment 262149 [details] Patch Sorry about that. Maybe updatePlatformSpecificTestOptionsForTest() here should do an |= instead ?
Hunseop Jeong
Comment 4 2015-09-30 20:01:25 PDT
Hunseop Jeong
Comment 5 2015-09-30 20:03:04 PDT
(In reply to comment #3) > Comment on attachment 262149 [details] > Patch > > Sorry about that. Maybe updatePlatformSpecificTestOptionsForTest() here > should do an |= instead ? Done. Thanks for the review.
WebKit Commit Bot
Comment 6 2015-09-30 21:21:39 PDT
Comment on attachment 262226 [details] Patch Clearing flags on attachment: 262226 Committed r190386: <http://trac.webkit.org/changeset/190386>
WebKit Commit Bot
Comment 7 2015-09-30 21:21:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.