[EFL] css3/device-adapt/* tests failed after r190335. https://bugs.webkit.org/show_bug.cgi?id=149655

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-09-30
Reviewed by Simon Fraser.

device-adapt/* tests need the fixedLayout option but useFixedLayout option is
overwritten by updatePlatformSpecificViewOptionsForTest after r190335.

* WebKitTestRunner/efl/TestControllerEfl.cpp:
(WTR::shouldUseFixedLayout):

Canonical link: https://commits.webkit.org/167802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190386 268f45cc-cd09-0410-ab3c-d52691b4dbfc